--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,10 +7,15 @@
 <nav  class="navbar navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(to right, blue , cyan);margin-bottom: 15px; border-radius: 25px;">
 <div class="container">
   <img src="/images/logo.PNG" style="width: auto; height: auto; margin-top: auto;margin-bottom: auto; margin-left: auto; margin-right: auto;"></img>
-<a href="/profile">Profile <i class="fa fa-home"></i></a>
-  <a href="/Fund">Fund <i class="fa fa-database"></i></a>
-  <a href="/salary">Salary <i class="fa fa-database"></i></a>
-  <a href="/logout">Logout <i class="fa fa-sign-out"></i></a>
+<a href="/profile" style="background-image: linear-gradient(to right, red , orange);">Profile <i class="fa fa-home"></i></a>
+  <a href="/Fund" style="background-image: linear-gradient(to right, green , lime);">Fund <i class="fa fa-dollar"></i></a>
+  <a href="/salary" style="background-image: linear-gradient(to right, rgb(85, 23, 231) , rgb(53, 80, 235));">Salary <i class="fa fa-money"></i></a>
+    <a href="/property" style="background-image: linear-gradient(to right, rgb(162, 0, 255) , rgb(255, 0, 76));">Property <i class="fa fa-building"></i></a>
+    <a href="/gold" style="background-image: linear-gradient(to right, brown , gold);">Gold <i class="fa fa-trophy"></i></a>
+        <a href="/shares"style="background-image: linear-gradient(to right, orange , gold);">Shares <i class="fa fa-bitcoin"></i></a>
+
+
+  <a href="/logout" style="background-image: linear-gradient(to right, grey , black);">Logout <i class="fa fa-sign-out"></i></a>
 
 </div>
 </nav>
