--- a/views/property/addOrEditproperty.hbs
+++ b/views/property/addOrEditproperty.hbs
@@ -8,29 +8,33 @@
 </nav>
 </nav>
 <h2 style="font: italic bold 24px/60px Georgia, serif;"><center>{{viewTitle}}</h2></center>
-<form action="/salary" method="POST" autocomplete="off" style=" background-image: linear-gradient(to bottom, white , rgb(221, 221, 221)); border-radius:25px; padding:15px">
-    <input type="hidden" name="_id" value="{{salary._id}}">
+<form action="/property" method="POST" autocomplete="off" style=" background-image: linear-gradient(to bottom, white , rgb(221, 221, 221)); border-radius:25px; padding:15px">
+    <input type="hidden" name="_id" value="{{property._id}}">
     <div class="form-group">
         <label>Full Name</label>
-        <input type="text" class="form-control" name="fullName" placeholder="Full Name" value="{{salary.fullName}}">
+        <input type="text" class="form-control" name="fullName" placeholder="Full Name" value="{{property.fullName}}">
         <div class="text-danger">
-            {{salary.fullNameError}}</div>
+            {{property.fullNameError}}</div>
     </div>
-
+  
     
     <div class="form-row">
             </div>
              <div class="form-group col-md-6">
-                <label>Month</label>
-                <input type="text" class="form-control" name="month" placeholder="Month" value="{{salary.month}}">
+                <label>Location</label>
+                <input type="text" class="form-control" name="location" placeholder="location" value="{{property.location}}">
             </div>
             <div class="form-group col-md-6">
-                <label>Salary</label>
-                <input type="text" class="form-control" name="salary" placeholder="Salary" value="{{salary.salary}}">
+                <label>Address</label>
+                <input type="text" class="form-control" name="address" placeholder="Address" value="{{property.address}}">
+            </div>
+            <div class="form-group col-md-6">
+                <label>Estimated Amount</label>
+                <input type="text" class="form-control" name="amount" placeholder="amount" value="{{property.amount}}">
             </div>
     
     <div class="form-group">
         <button type="submit" class="btn btn-info" style=" background-image: linear-gradient(to left, rgb(0, 162, 255) ,blue); border-radius: 25px;padding: 14px 25px;"><i class="fa fa-database"></i> Submit</button>
-        <a class="btn btn-secondary" href="/salary/listsalary"><i class="fa fa-list-alt"></i> View All</a>
+        <a class="btn btn-secondary" href="/property/listproperty"><i class="fa fa-list-alt"></i> View All</a>
     
 </form>
