--- a/views/gold/listgold.hbs
+++ b/views/gold/listgold.hbs
@@ -1,8 +1,8 @@
 <nav  class="navbar navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(to right, blue , cyan);margin-bottom: 15px; border-radius: 25px;">
 <div class="container">
   <img src="/images/logo.PNG" style="width: auto; height: 200px; margin-top: auto;margin-bottom: auto; margin-left: auto; margin-right: auto;"></img>
-<a href="/profile">Profile <i class="fa fa-home"></i></a>
-<a href="/logout">Logout <i class="fa fa-sign-out"></i></a>
+<a href="/profile">Profile <i class="fa fa-home"></i></a>   
+<a href="/logout">Logout <i class="fa fa-sign-out"></i></a>   
 
 </div>
 </nav>
@@ -12,29 +12,25 @@
             <thead>
         <tr>
             <th>Full Name <i class="fa fa-address-book"></i></th>
-            <th>Email <i class="fa fa-envelope"></i></th>
-            <th>Mobile <i class="fa fa-mobile-phone"></i></th>
-            <th>Amount <i class="fa fa-dollar"></i></th>
+            <th>Mobile <i class="fa fa-home"></i></th>
+            <th>Amount <i class="fa fa-money"></i></th>
             {{!-- <th>Created by <i class="fa fa-user-plus"></i></th>
             <th>Last Modified by <i class="fa fa-gear"></i></th> --}}
-            <th>
-                
-            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         
-        {{#each list}}
+        {{#each listgold}}
        
         <tr>
             <td>{{this.fullName}}</td>
-            <td>{{this.email}}</td>
             <td>{{this.mobile}}</td>
             <td>{{this.Amount}}</td>
             {{!-- <td>{{this.createid}}</td>
             <td> {{this.idno}}</td> --}}
-            
             <td>
+                <a href="/gold/{{this._id}}" style=" background-image: linear-gradient(to right, green ,rgb(202, 202, 5)); border-radius: 5px;"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
                 <a href="/gold/delete/{{this._id}}" onclick="return confirm('Are you sure to delete this record?');" style="background-image: linear-gradient(to left, red ,orange); border-radius: 5px;"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
             </td>
         </tr>
