--- a/views/gold/addOrEditgold.hbs
+++ b/views/gold/addOrEditgold.hbs
@@ -11,24 +11,12 @@
 <form action="/gold" method="POST" autocomplete="off" style=" background-image: linear-gradient(to bottom, white , rgb(221, 221, 221)); border-radius:25px; padding:15px">
     <input type="hidden" name="_id" value="{{gold._id}}">
     <div class="form-group">
-        <label>Full Name</label>
-        <input type="text" class="form-control" name="fullName" placeholder="Full Name" value="{{gold.fullName}}">
+        <label>Amount</label>
+        <input type="text" class="form-control" name="amount" placeholder="Gold Amount" value="{{gold.amount}}">
         <div class="text-danger">
             {{gold.fullNameError}}</div>
     </div>
   
-    
-    <div class="form-row">
-            <div class="form-group col-md-6">
-                <label>Mobile</label>
-                <input type="text" class="form-control" name="mobile" placeholder="Mobile" value="{{gold.mobile}}">
-            </div>
-             <div class="form-group col-md-6">
-                <label>Amount</label>
-                <input type="text" class="form-control" name="Amount" placeholder="Amount" value="{{gold.Amount}}">
-            </div>
-            
-    </div>
     
     <div class="form-group">
         <button type="submit" class="btn btn-info" style=" background-image: linear-gradient(to left, rgb(0, 162, 255) ,blue); border-radius: 25px;padding: 14px 25px;"><i class="fa fa-database"></i> Submit</button>
