--- a/views/gold/listgold.hbs
+++ b/views/gold/listgold.hbs
@@ -11,9 +11,7 @@
 <table class="table table-hover" style="border-radius: 25px; background-image: linear-gradient(to bottom, white , rgb(221, 221, 221));"> 
             <thead>
         <tr>
-            <th>Full Name <i class="fa fa-address-book"></i></th>
-            <th>Mobile <i class="fa fa-home"></i></th>
-            <th>Amount <i class="fa fa-money"></i></th>
+            <th>Gold Amount <i class="fa fa-address-book"></i></th>
             {{!-- <th>Created by <i class="fa fa-user-plus"></i></th>
             <th>Last Modified by <i class="fa fa-gear"></i></th> --}}
             <th></th>
@@ -24,9 +22,7 @@
         {{#each listgold}}
        
         <tr>
-            <td>{{this.fullName}}</td>
-            <td>{{this.mobile}}</td>
-            <td>{{this.Amount}}</td>
+            <td>{{this.amount}}</td>
             {{!-- <td>{{this.createid}}</td>
             <td> {{this.idno}}</td> --}}
             <td>
